chore: fix contrast for messages

--- a/src/pages/player/chat.module.scss
+++ b/src/pages/player/chat.module.scss
@@ -13,7 +13,7 @@ $bubble-horizontal-padding: 10px;
   word-break: break-word;
   padding: cs.$space-scaled-xxs $bubble-horizontal-padding;
   border-radius: cs.$border-radius-alert;
-  background-color: cs.$color-background-button-primary-disabled;
+  background-color: cs.$color-background-input-disabled;
 }
 .wrapper {
   padding: cs.$space-scaled-xxs 0;
